examples/invalid/test14.alice

The looking-glass hatta ()
opened
  x was a number but
  x became (5+2 - 3/10.
closed
